[workspace]
members = [
  "electron/native",
  "fold_impls",
  "turbocafe",
  "turbo_server",
]

[patch.crates-io]
lexical-core = {git = 'https://github.com/Gelbpunkt/rust-lexical', branch = 'fix-warnings-and-update-deps'}

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization
# opt-level = 'z' # Optimize for size.
# panic = 'abort' # Abort on panic
