[workspace]
members = [
  "electron/native",
  "fold_impls",
  "multipatch",
  "prosemirror_collab_server",
  "turbocafe",
  "turboid",
  "turbonet",
  "turbotime",
  "turbo_server",
]

[patch.crates-io]
# i54_ = {path = "/Users/eden/i54"}
# turbosql = {path = "../turbosql/turbosql"}
juniper = {git = "https://github.com/trevyn/juniper", branch = "juniper-warp-log-body"}
juniper_codegen = {git = "https://github.com/trevyn/juniper", branch = "juniper-warp-log-body"}
juniper_graphql_ws = {git = "https://github.com/trevyn/juniper", branch = "juniper-warp-log-body"}
juniper_warp = {git = "https://github.com/trevyn/juniper", branch = "juniper-warp-log-body"}
turbosql = {git = "https://github.com/trevyn/turbosql", branch = "main"}

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true # Enable Link Time Optimization
# opt-level = 'z' # Optimize for size.
# panic = 'abort' # Abort on panic
