[package]
authors = ["Eden <rust@eden2.com>"]
description = "Create and apply binary or text patches that abstract over multiple underlying patch algorithms. (WIP)"
edition = "2018"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "multipatch"
repository = "https://github.com/trevyn/turbo"
version = "0.0.0"

[dependencies]
anyhow = "1"
qbsdiff = "1"
