[package]
authors = ["Eden <rust@eden2.com>"]
description = "Server-side functionality for ProseMirror's collaborative editing feature. (WIP)"
edition = "2018"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "prosemirror_collab_server"
repository = "https://github.com/trevyn/turbo"
version = "0.0.0"

[dependencies]
deno_core = "0.76" # waiting for >0.78.0
