[package]
authors = ["Eden <rust@eden2.com>"]
edition = "2018"
name = "turbo_server"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1"
env_logger = "0.8"
fold_impls = {path = "../fold_impls"}
futures = "0.3"
i54_ = {version = "0.0.1", features = ["rusqlite", "juniper"]}
juniper = "=0.15.3"
juniper_codegen = "=0.15.3"
juniper_graphql_ws = "=0.2.3"
juniper_warp = {version = "=0.6.2", features = ["subscriptions"]}
log = "0.4"
mime_guess = "2"
rust-embed = "5"
tokio = {version = "=0.2.25", features = ["rt-core", "macros"]}
# turbosql = {path = "../../../turbosql/turbosql"}
turbosql = "0.1.0"
warp = {version = "=0.2.5"}
