[package]
authors = ["Eden <rust@eden2.com>"]
description = "The core (web & GraphQL) server for the Turbo end-user app. (WIP)"
edition = "2018"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbo_server"
repository = "https://github.com/trevyn/turbo"
version = "0.0.0"

[build-dependencies]
rustc_version = "0.3"

[dependencies]
anyhow = "1" 
env_logger = "0.8" 
fold_impls = {path = "../fold_impls"} 
futures = "0.3" 
i54_ = {version = "0.1", features = ["rusqlite", "juniper"]} 
juniper = "=0.15.3" 
juniper_codegen = "=0.15.3" 
juniper_graphql_ws = "=0.2.3" 
juniper_warp = {version = "=0.6.2", features = ["subscriptions"]} 
log = "0.4" 
mime_guess = "2" 
multipatch = {path = "../multipatch"} 
once_cell = "1" 
prosemirror_collab_server = {path = "../prosemirror_collab_server"} 
rust-embed = "5" 
tokio = {version = "0.2", features = ["rt-core", "macros"]} 
turbocafe = {path = "../turbocafe"} 
turbosql = "=0.1.4" # we do require at least 0.1.2
warp = {version = "0.2"}
