[package]
authors = ["Eden <rust@eden2.com>"]
description = "Turbocafe, the content-addressable file store (WIP)"
edition = "2018"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbocafe"
repository = "https://github.com/trevyn/turbo"
version = "0.0.0"

[dependencies]
bs58 = "0.4.0"
multihash = {version = "0.13.2", default-features = false, features = ["std", "multihash-impl", "blake3"]}
thiserror = "1"
turbosql = "0.1.0"
