[package]
authors = ["Eden <rust@eden2.com>"]
description = "Turbo's content-addressable file eyrie. :)"
edition = "2018"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbocafe"
repository = "https://github.com/trevyn/turbo"
version = "0.0.1"

[dependencies]
bs58 = "0.4"
d-macro = "=0.1.0"
multihash = {version = "0.13", default-features = false, features = ["std", "multihash-impl", "blake3"]}
thiserror = "1"
turboid = {path = "../turboid"}
turbosql = "0.1"
