[package]
authors = ["Eden <rust@eden2.com>"]
description = "Turbo's identity framework. (WIP)"
edition = "2018"
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turboid"
repository = "https://github.com/trevyn/turbo"
version = "0.0.0"

[dev-dependencies]
quickcheck = "1"

[dependencies]
bs58 = "0.4"
ed25519-dalek = "1"
multihash = {version = "0.13", default-features = false, features = ["std", "multihash-impl", "identity"]}
rand = "0.8"
