[package]
authors = ["Eden <rust@eden2.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT"
name = "turbo"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib"]
name = "turbo"

[build-dependencies]
neon-build = "=0.7.0"

[dependencies]
log = "0.4"
neon = {version = "=0.7.0", features = ["proc-macros"]}
turbo_server = {path = "../../turbo_server"}
