[package]
authors = ["Eden <rust@eden2.com>"]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
license = "MIT OR Apache-2.0 OR CC0-1.0"
name = "turbo"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]
name = "turbo"

[build-dependencies]
neon-build = "=0.7.1"

[dependencies]
futures = "0.3"
log = "0.4"
# when bumping neon, remember to bump neon-cli in electron/package.json too
neon = {version = "=0.7.1", features = ["proc-macros", "event-handler-api"]}
once_cell = "1"
turbo_server = {path = "../../turbo_server"}
